# innowise_laboratory

lecture_1/my_project/: main.py  pyproject.toml  requirements.txt
lecture_2/: mini_profile.py
lecture_3/: Analyzer.py
lecture_4/: queries.sql  school.db  skript.py
lecture_5/: pyproject.toml
lecture_5/book_api/: main.py  pyproject.toml
lecture_5/book_api/Books/: crud.py  schemas.py  views.py
lecture_5/book_api/books/: crud.py  database.py  models.py  schemas.py
lecture_5/book_api/books/routers/: books_views.py
lecture_5/book_api/data/: books.db
lecture_6/: Dockerfile  main.py  pyproject.toml
lecture_6/book_api/: main.py
lecture_6/book_api/books/: crud.py  database.py  models.py  schemas.py
lecture_6/book_api/books/data/: books.db
lecture_6/book_api/books/routers/: books_views.py
lecture_6/book_api/data/: books.db
