[project]
name = "book-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Markarova Natalia",email = "Ska-angel@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.124.0,<0.125.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]

[dependency-groups]
dev = [
    "uvicorn[standard] (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
